--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Headline</h1>
+			<h1>Split Lightning</h1>
 		</header>
 			<section id="content">
 				<canvas id="Lightning" data-processing-sources="Lightning.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Click for more split lightning
 	    </footer>
 	</body>
 </html>
